Add endpoint for updating personal bests and add personal best in return of gets in openapi.yaml
